[tool.poetry]
name = "test-sql"
version = "0.1.0"
description = ""
authors = ["PolinaLack <polina.lack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
pydantic-settings = "^2.3.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
